--- a/modules/hyprland/hyprland.conf
+++ b/modules/hyprland/hyprland.conf
@@ -1,11 +1,12 @@
 monitor=eDP-1,1920x1080@60,0x0,1
 monitor=eDP-1,addreserved,0,0,48,0
 
-exec-once=swaybg -i ~/.config/nixos/pics/wallpaper.png
+exec-once=swaybg -i $NIXOS_CONFIG_DIR/pics/wallpaper.png
 exec-once=foot --server
 exec-once=wlsunset -l -23 -L -46
 exec-once=eww daemon
 exec-once=eww open bar
+exec-once=dunst
 
 input {
     follow_mouse=1
@@ -19,27 +20,25 @@ general {
     gaps_out=12
     border_size=4
     col.active_border=0xffb072d1
-    col.inactive_border=0xff44465c
+    col.inactive_border=0xff292a37
 
     damage_tracking=full
 }
 
 decoration {
-    rounding=0
+    rounding=8
     blur=0
-    blur_size=0 # minimum 1
-    blur_passes=0 # minimum 1, more passes = more resource intensive.
     drop_shadow=0
-    shadow_range=32
-    col.shadow=0x80382848
+    shadow_range=60
+    col.shadow=0x66000000
 }
 
 animations {
     enabled=1
     animation=windows,1,4,default,slide
-    animation=borders,1,20,default
+    animation=borders,1,5,default
     animation=fadein,1,5,default
-    animation=workspaces,1,3,default,fadein
+    animation=workspaces,1,3,default,vertslide
 }
 
 dwindle {
@@ -48,7 +47,7 @@ dwindle {
 
 # example window rules
 # for windows named/classed as abc and xyz
-#windowrule=move 69 420,abc
+windowrule=move 0 0,pqiv
 #windowrule=size 420 69,abc
 #windowrule=tile,xyz
 #windowrule=float,abc
@@ -59,7 +58,7 @@ dwindle {
 bind=ALT,Return,exec,footclient
 bind=ALTSHIFT,Q,killactive,
 bind=ALT,V,togglefloating,
-bind=ALT,R,exec,wofi --show drun --xoffset=44 --yoffset=12 --width=12% --height=984 --style=$HOME/.config/nixos/config/wofi.css --term=footclient --prompt=Run --allow_images=true
+bind=ALT,R,exec,wofi --show run --xoffset=1670 --yoffset=12 --width=230px --height=984 --style=$HOME/.config/wofi.css --term=footclient --prompt=Run
 bind=ALT,F,fullscreen,1
 
 bind=ALT,h,movefocus,l
@@ -84,7 +83,7 @@ bind=ALTSHIFT,numbersign,movetoworkspacesilent,3
 bind=ALTSHIFT,dollar,movetoworkspacesilent,4
 bind=ALTSHIFT,percent,movetoworkspacesilent,5
 
-bind=,XF86MonBrightnessUp,exec,brightnessctl set +5% && $HOME/.config/nixos/config/eww/scripts/brightness.sh &
-bind=,XF86MonBrightnessDown,exec,brightnessctl set 5%- && $HOME/.config/nixos/config/eww/scripts/brightness.sh &
-bind=,XF86MonRaiseVolume,exec,brightnessctl set 5%- && $HOME/.config/nixos/config/eww/scripts/volume.sh &
-bind=,XF86MonLowerVolume,exec,brightnessctl set 5%- && $HOME/.config/nixos/config/eww/scripts/volume.sh &
+bind=,XF86MonBrightnessUp,exec,brightnessctl set +5% && $NIXOS_CONFIG_DIR/config/eww/scripts/brightness.sh &
+bind=,XF86MonBrightnessDown,exec,brightnessctl set 5%- && $NIXOS_CONFIG_DIR/config/eww/scripts/brightness.sh &
+bind=,XF86MonRaiseVolume,exec,brightnessctl set 5%- && $NIXOS_CONFIG_DIR/config/eww/scripts/volume.sh &
+bind=,XF86MonLowerVolume,exec,brightnessctl set 5%- && $NIXOS_CONFIG_DIR/config/eww/scripts/volume.sh &
