--- a/modules/hyprland/hyprland.conf
+++ b/modules/hyprland/hyprland.conf
@@ -9,7 +9,7 @@ exec-once=eww open bar
 exec-once=dunst
 
 input {
-    follow_mouse=1
+    follow_mouse=0
 }
 
 general {
@@ -47,7 +47,8 @@ dwindle {
 
 # example window rules
 # for windows named/classed as abc and xyz
-windowrule=move 0 0,pqiv
+windowrule=float,move 0 0,pqiv
+windowrule=float,foot-notes
 #windowrule=size 420 69,abc
 #windowrule=tile,xyz
 #windowrule=float,abc
@@ -59,7 +60,8 @@ bind=ALT,Return,exec,footclient
 bind=ALTSHIFT,Q,killactive,
 bind=ALT,V,togglefloating,
 bind=ALT,R,exec,wofi --show run --xoffset=1670 --yoffset=12 --width=230px --height=984 --style=$HOME/.config/wofi.css --term=footclient --prompt=Run
-bind=ALT,F,fullscreen,1
+bind=ALT,N,exec,cd ~/stuff/notes && footclient -a foot-notes sh -c "nvim ~/stuff/notes/$(date '+%Y-%m-%d').md"
+bind=ALT,F,fullscreen,0
 
 bind=ALT,h,movefocus,l
 bind=ALT,l,movefocus,r
@@ -83,7 +85,7 @@ bind=ALTSHIFT,numbersign,movetoworkspacesilent,3
 bind=ALTSHIFT,dollar,movetoworkspacesilent,4
 bind=ALTSHIFT,percent,movetoworkspacesilent,5
 
-bind=,XF86MonBrightnessUp,exec,brightnessctl set +5% && $NIXOS_CONFIG_DIR/config/eww/scripts/brightness.sh &
-bind=,XF86MonBrightnessDown,exec,brightnessctl set 5%- && $NIXOS_CONFIG_DIR/config/eww/scripts/brightness.sh &
-bind=,XF86MonRaiseVolume,exec,brightnessctl set 5%- && $NIXOS_CONFIG_DIR/config/eww/scripts/volume.sh &
-bind=,XF86MonLowerVolume,exec,brightnessctl set 5%- && $NIXOS_CONFIG_DIR/config/eww/scripts/volume.sh &
+bind=,XF86MonBrightnessUp,exec,brightnessctl set +5%
+bind=,XF86MonBrightnessDown,exec,brightnessctl set 5%-
+bind=,XF86AudioRaiseVolume,exec,pamixer -i 5
+bind=,XF86AudioLowerVolume,exec,pamixer -d 5
